--- a/public/projects/index.html
+++ b/public/projects/index.html
@@ -8,14 +8,12 @@
 <meta name="MobileOptimized" content="320">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="referrer" content="no-referrer">
-<meta name="description" content="Biography Felix Thoemmes is an assistant professor in the department of Human Development, with joint appointment in the Department of Psychology, at Cornell University. His research interests are causal inference, especially using structural equation models, or propensity scores, missing data, and open science. Before coming to Cornell, he was an assistant professor at Texas A&amp;M University, and the University of Tubingen, Germany.
-A current CV can be downloaded here.">
+<meta name="description" content="2017 Thoemmes, F., Rosseel, Y., &amp; Textor, J. (in press). Local Testing of Structural Equation Models. Psychological Methods.">
 
-<meta property="og:title" content="About" />
-<meta property="og:description" content="Biography Felix Thoemmes is an assistant professor in the department of Human Development, with joint appointment in the Department of Psychology, at Cornell University. His research interests are causal inference, especially using structural equation models, or propensity scores, missing data, and open science. Before coming to Cornell, he was an assistant professor at Texas A&amp;M University, and the University of Tubingen, Germany.
-A current CV can be downloaded here." />
+<meta property="og:title" content="Projects" />
+<meta property="og:description" content="2017 Thoemmes, F., Rosseel, Y., &amp; Textor, J. (in press). Local Testing of Structural Equation Models. Psychological Methods." />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="/about/" />
+<meta property="og:url" content="/projects/" />
 
 
 
@@ -36,10 +34,10 @@ A current CV can be downloaded here." />
 <title>
 
 
-     About 
+     Projects 
 
 </title>
-<link rel="canonical" href="/about/">
+<link rel="canonical" href="/projects/">
 
 
 
@@ -157,17 +155,16 @@ A current CV can be downloaded here." />
         <div class="content">
             <div class="page-heading">
 
-    About
+    Projects
 
 </div>
 
             <div class="markdown">
                 
 
-<h1 id="biography">Biography</h1>
+<h3 id="2017">2017</h3>
 
-<p>Felix Thoemmes is an assistant professor in the department of Human Development, with joint appointment in the Department of Psychology, at Cornell University. His research interests are causal inference, especially using structural equation models, or propensity scores, missing data, and open science. Before coming to Cornell, he was an assistant professor at Texas A&amp;M University, and the University of Tubingen, Germany.<br />
-A current <a href="/cvthoemmes.pdf">CV</a> can be downloaded here.</p>
+<p><strong>Thoemmes, F.</strong>, Rosseel, Y., &amp; Textor, J. (in press). Local Testing of Structural Equation Models. <em>Psychological Methods.</em></p>
 
             </div>
         </div>
